Optimize services