@@ -2,11 +2,12 @@ package digit.academy.tutorial.service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.Map;
+import java.util.Objects;
 
+import org.egov.common.contract.models.Workflow;
+import org.egov.common.contract.workflow.ProcessInstance;
 import org.egov.tracer.model.CustomException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 
@@ -14,6 +15,7 @@ import digit.academy.tutorial.config.Configuration;
 import digit.academy.tutorial.enrichment.AdvocateClerkEnrichment;
 import digit.academy.tutorial.kafka.Producer;
 import digit.academy.tutorial.repository.AdvocateClerkRepository;
+import digit.academy.tutorial.util.WorkflowUtil;
 import digit.academy.tutorial.validators.AdvocateClerkRegistrationValidator;
 import digit.academy.tutorial.web.models.AdvocateClerk;
 import digit.academy.tutorial.web.models.AdvocateClerkRequest;
@@ -29,22 +31,29 @@ public class AdvocateClerkService {
 	private final Producer producer;
 	private final Configuration configuration;
 	private final AdvocateClerkRepository advocateClerkRepo;
-	private final WorkflowService workflowService;
+	private final WorkflowUtil workflowUtil;
 	private final SmsNotificationService smsNotificationService;
 
-	@Autowired
 	public AdvocateClerkService(AdvocateClerkRegistrationValidator validator, AdvocateClerkEnrichment enrichment,
 			Producer producer, Configuration configuration, AdvocateClerkRepository advocateClerkRepo,
-			WorkflowService workflowService, SmsNotificationService smsNotificationService) {
+			WorkflowUtil workflowUtil, SmsNotificationService smsNotificationService) {
 		this.validator = validator;
 		this.enrichment = enrichment;
 		this.producer = producer;
 		this.configuration = configuration;
 		this.advocateClerkRepo = advocateClerkRepo;
-		this.workflowService = workflowService;
+		this.workflowUtil = workflowUtil;
 		this.smsNotificationService = smsNotificationService;
 	}
 
+	/**
+	 * Registers an advocate clerk based on the provided request.
+	 * This method validates the registration, enriches the data, updates workflow status, 
+	 * and pushes the registration to a Kafka topic for persistence.
+	 *
+	 * @param clerkRequest The request containing advocate clerk details and metadata.
+	 * @return List of AdvocateClerk objects that were successfully registered.
+	 */
 	public List<AdvocateClerk> registerAdvocateClerkRequest(AdvocateClerkRequest clerkRequest) {
 		try {
 			// Validate registration
@@ -54,7 +63,7 @@ public class AdvocateClerkService {
 			enrichment.enrichAdvocateClerkRegistration(clerkRequest);
 
 			// Update workflow status
-			workflowService.updateAdvocateClerkWorkflowStatus(clerkRequest);
+			workflowUtil.updateAdvocateClerkWorkflowStatus(clerkRequest);
 
 			// Push the registration to the topic for persister to listen and persist
 			producer.push(configuration.getAdvClerkCreateTopic(), clerkRequest);
@@ -70,21 +79,31 @@ public class AdvocateClerkService {
 		}
 	}
 
+	/**
+	 * Searches for advocate clerk registrations based on the provided search criteria.
+	 * This method fetches advocate clerk details, retrieves their workflow status, and returns the list of clerks.
+	 *
+	 * @param searchRequest The request containing search criteria for advocate clerks.
+	 * @return List of AdvocateClerk objects that match the search criteria.
+	 */
 	public List<AdvocateClerk> searchAdvocateClerkRegistration(AdvocateClerkSearchRequest searchRequest) {
 		try {
-			List<AdvocateClerk> clerks = searchRequest.getCriteria().stream().flatMap(criteria -> {
-				List<AdvocateClerk> advocateClerks = advocateClerkRepo
-						.getAdvocateClerkRegistrations(searchRequest.getCriteria().get(0));
-				if (CollectionUtils.isEmpty(advocateClerks)) {
-					return Stream.empty();
-				}
+			List<AdvocateClerk> clerks = searchRequest.getCriteria().stream()
+					.map(advocateClerkRepo::getAdvocateClerkRegistrations).filter(Objects::nonNull)
+					.flatMap(List::stream).toList();
+			if (CollectionUtils.isEmpty(clerks)) {
+				return Collections.emptyList();
+			}
 
-				advocateClerks.forEach(clerk -> {
-					clerk.setWorkflow(workflowService.getCurrentWorkflow(searchRequest.getRequestInfo(),
-							clerk.getTenantId(), clerk.getApplicationNumber()));
-				});
-				return advocateClerks.stream();
-			}).collect(Collectors.toList());
+			List<String> applicationNumbers = clerks.stream().map(AdvocateClerk::getApplicationNumber).toList();
+
+			List<ProcessInstance> processInstances = workflowUtil.getProcessInstances(searchRequest.getRequestInfo(),
+					clerks.get(0).getTenantId(), applicationNumbers);
+
+			clerks.forEach(clerk -> {
+				Map<String, Workflow> workflowMap = workflowUtil.getWorkflow(processInstances);
+				clerk.setWorkflow(workflowMap.get(clerk.getApplicationNumber()));
+			});
 
 			return clerks;
 		} catch (CustomException e) {
@@ -96,6 +115,15 @@ public class AdvocateClerkService {
 		}
 	}
 
+	/**
+	 * Updates the registration details for an advocate clerk.
+	 * This method validates the clerk existence, updates the clerk details, enriches the data,
+	 * updates the workflow status, and pushes the updated registration to a Kafka topic.
+	 * If the clerk is activated, it sends a notification.
+	 *
+	 * @param clerkRequest The request containing advocate clerk details and metadata.
+	 * @return The updated AdvocateClerk object.
+	 */
 	public AdvocateClerk updateAdvocateClerkRegistration(AdvocateClerkRequest clerkRequest) {
 		try {
 			AdvocateClerk clerk = clerkRequest.getClerks().get(0);
@@ -110,12 +138,12 @@ public class AdvocateClerkService {
 			enrichment.enrichAdvocateClerkRegistrationUpdate(clerkRequest);
 
 			// Update workflow status
-			workflowService.updateAdvocateClerkWorkflowStatus(clerkRequest);
+			workflowUtil.updateAdvocateClerkWorkflowStatus(clerkRequest);
 
 			producer.push(configuration.getAdvClerkUpdateTopic(), clerkRequest);
 
 			// Call notification service if advocate is activated
-			if (clerk.getIsActive()) {
+			if (Boolean.TRUE.equals(clerk.getIsActive())) {
 				smsNotificationService.sendNotification(Collections.singletonList(clerk.getIndividualId()),
 						clerkRequest.getRequestInfo(), clerk.getTenantId(), AdvocateClerk.class.getName(),
 						clerk.getApplicationNumber());
